--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 url: "https://askuma.github.io"
-baseurl: ""
-remote_theme: pages-themes/hacker@v0.2.0
-plugins:
-- jekyll-remote-theme # add this line to the plugins list if you already have one
+remote_theme: jekyll/minima
+title: My Awesome Site
+description: Welcome to my portfolio!
+baseurl: "" 
