--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,7 @@
 url: "https://askuma.github.io"
-remote_theme: jekyll/minima
-title: My Awesome Site
-description: Welcome to my portfolio!
+remote_theme: pages-themes/hacker@v0.2.0
+plugins:
+- jekyll-remote-theme # add this line to the plugins list if you already have one
+title: "My First Page"
+description: "A short description of your site's purpose"
 baseurl: "" 
